# graphium

./: .authors.yml  .gitignore  .mailmap  1agent_sweep.sh  2.0  2q  404.html  =0.4.5  AUTHORS.rst  CHANGELOG.rst  CNAME  CONTRIBUTE.md  CONTRIBUTING.md  Doxyfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  base_shapes.yaml  benchmark_save_load.csv  build_env.yml  change_commits.sh  cleanup_files.sh  cli_references.html  codecov.yml  contribute.html  convert_yml.py  datasets.html  design.html  download_datasets.sh  enable_ipu.sh  env.yml  env_windows.yml  graphium_train_job.sh  graphium_train_job_depth_4.sh  index.html  install_ipu.sh  license.html  lightning.txt  main_neurips_sweep.py  (+18 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
1.2.11/: 404.html  benchmark.html  cli_references.html  contribute.html  datasets.html  design.html  index.html  license.html  objects.inv  pretrained_models.html  sitemap.xml
1.2.4/: 404.html  benchmark.html  cli_references.html  contribute.html  datasets.html  design.html  index.html  license.html  pretrained_models.html  sitemap.xml
1.2.9/: 404.html  benchmark.html  cli_references.html  contribute.html  datasets.html  design.html  index.html  license.html  pretrained_models.html  sitemap.xml
2.0.0/: 404.html  benchmark.html  cli_references.html  contribute.html  datasets.html  design.html  index.html  license.html  pretrained_models.html  sitemap.xml
2.0.1/: 404.html  baseline.html  cli_references.html  contribute.html  datasets.html  design.html  index.html  license.html  pretrained_models.html  sitemap.xml
2.0.2/: 404.html  baseline.html  cli_references.html  contribute.html  datasets.html  design.html  index.html  license.html  pretrained_models.html  sitemap.xml
2.1.0/: 404.html  baseline.html  cli_references.html  contribute.html  datasets.html  design.html  index.html  license.html  pretrained_models.html  sitemap.xml
2.1.1/: 404.html  baseline.html  cli_references.html  contribute.html  datasets.html  design.html  index.html  license.html  pretrained_models.html  sitemap.xml
2.1.3/: 404.html  baseline.html  cli_references.html  contribute.html  datasets.html  design.html  index.html  license.html  pretrained_models.html  sitemap.xml
2.2.0/: 404.html  baseline.html  cli_references.html  contribute.html  datasets.html  design.html  index.html  license.html  pretrained_models.html  sitemap.xml
2.3.0/: 404.html  baseline.html  cli_references.html  contribute.html  datasets.html  design.html  index.html  license.html  pretrained_models.html  sitemap.xml
2.3.1/: 404.html  baseline.html  cli_references.html  contribute.html  datasets.html  design.html  index.html  license.html  pretrained_models.html  sitemap.xml
2.3.2/: 404.html  baseline.html  cli_references.html  contribute.html  datasets.html  design.html  index.html  license.html  objects.inv  pretrained_models.html  sitemap.xml
2.3.3/: 404.html  baseline.html  contribute.html  datasets.html  design.html  index.html  license.html  pretrained_models.html  sitemap.xml
2.3.4/: 404.html  baseline.html  contribute.html  datasets.html  design.html  index.html  license.html  pretrained_models.html  sitemap.xml
2.3.5/: 404.html  baseline.html  contribute.html  datasets.html  design.html  index.html  license.html  pretrained_models.html  sitemap.xml
2.3.6/: 404.html  baseline.html  contribute.html  datasets.html  design.html  index.html  license.html  objects.inv  pretrained_models.html  sitemap.xml
2.4.0/: 404.html  baseline.html  contribute.html  datasets.html  design.html  index.html  license.html  objects.inv  pretrained_models.html  sitemap.xml
2.4.1/: 404.html  baseline.html  contribute.html  datasets.html  design.html  index.html  license.html  pretrained_models.html  sitemap.xml
2.4.4/: 404.html  baseline.html  contribute.html  datasets.html  design.html  index.html  license.html  pretrained_models.html  sitemap.xml
2.4.5/: 404.html  baseline.html  contribute.html  datasets.html  design.html  index.html  license.html  objects.inv  pretrained_models.html  sitemap.xml
ZINC_bench_gnn/: indexes_train_val_test.csv  smiles_score.csv
api/: goli.config.html  goli.data.html  goli.features.html  goli.ipu.html  goli.nn.html  goli.trainer.html  goli.utils.html  goli.visualization.html
binder/: environment.yml
docs/: baseline.md  cli_references.md  contribute.md  datasets.md  design.md  index.md  license.md  pretrained_models.md
environments/: build_env.yml  dev_env.yml  run_env.yml
expts/: .gitignore  config_ZINC_bench_gnn.yaml  config_bindingDB_pretrained.yaml  config_htsfp_pcba.yaml  config_micro-PCBA.yaml  config_micro_ZINC.yaml  config_micro_ZINC_MTL.yaml  config_molHIV.yaml  config_molHIV_pretrained.yaml  config_molPCBA.yaml  config_molPCQM4M.yaml  config_molPCQM4Mv2.yaml  config_molbace_pretrained.yaml  config_mollipo_pretrained.yaml  config_moltox21_pretrained.yaml  config_single_atom_dataset_pretrained.yaml  dataset_benchmark.py  example_zinc.yaml  get_datamodule_output.ipynb  main_ZINC_bench_gnn.py  main_micro_ZINC.py  main_molHIV.py  main_run.py  main_run_finetuning.py  main_run_finetuning_v1.py  main_run_finetuning_v2.py  main_run_get_fingerprints.py  main_run_hydra.py  main_run_learned_fingerprint.py  main_run_multitask.py  main_run_optuna.py  main_run_predict.py  main_run_test.py  main_scatter_bug.py  run_validation.py  run_validation_test.py  test_yaml.py
expts_untracked/: config_htsfp_pcba.yaml  config_single_atom_dataset_pretrained.yaml
goli/: __init__.py
graphium/: _version.py
main/: 404.html  baseline.html  benchmark.html  cli_references.html  contribute.html  datasets.html  design.html  index.html  license.html  objects.inv  pretrained_models.html  sitemap.xml
news/: MPNN_modification.rst  MPNN_validate.rst  TEMPLATE.rst  biased_MHSA.rst  cache.rst  collate_parquet_cleanup.rst  data_cache.rst  datasets.rst  fake_datamodule.rst  fast_packing.rst  first.rst  fix-scheduler.rst  flag.rst  grad_accum.rst  improve_documentation.rst  inception.rst  incompat.rst  ipu_dispatcher.rst  ipu_fp16.rst  ipu_tutorial.rst  metric_wrapper.rst  (+15 more)
(+1552 files in other folders)
